[FEAT]: Main, Login 액티비티 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,10 @@ dependencies {
 
     // AndroidX Fragment 라이브러리
     implementation("androidx.fragment:fragment-ktx:1.5.7")
+
+    // Kakao Login
+    implementation 'com.kakao.sdk:v2-user:2.10.0'
+
+    // 프로필 이미지
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
