--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    // 자바 권한 설정
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -56,4 +57,10 @@ dependencies {
 
     // 프로필 이미지
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+
+    // [카카오] 전체 모듈 설치, 2.11.0 버전부터 지원
+    // implementation "com.kakao.sdk:v2-all:2.13.0"
+
+    // 카카오 로그인
+    implementation "com.kakao.sdk:v2-user:2.13.0"
 }
