[FEAT] : 프래그먼트 추가, 뷰 바인딩
ranking 프래그먼트 추가, Main, Login 액티비티 뷰 바인딩 수정, 절대값 weight 상대값으로 수정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,5 @@ dependencies {
     // implementation "com.kakao.sdk:v2-all:2.13.0"
 
     // 카카오 로그인
-    implementation "com.kakao.sdk:v2-user:2.13.0"
+    //implementation "com.kakao.sdk:v2-user:2.13.0"
 }
