[FEAT] : 카카오 로그인 - 토큰 정보 확인

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
         <!-- 리다이렉션을 통해 인가코드를 받기 위함 -->
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
-            android:exported="true"
-            android:launchMode="singleTask">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -32,9 +31,6 @@
                 <data
                     android:host="oauth"
                     android:scheme="@string/kakao_redirection_scheme" />
-                <!-- Redirect URI: "kakao${7d6af00ceade6023ddf611602f60df60}://oauth" -->
-                <data android:host="oauth"
-                    android:scheme="kakao7d6af00ceade6023ddf611602f60df60" />
             </intent-filter>
         </activity>
 
