[FEAT] : 드디어 카카오 로그인 실행 완

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="oauth"
+                    android:host="oauth2"
                     android:scheme="@string/kakao_redirection_scheme" />
             </intent-filter>
         </activity>
