[FEAT] : 카카오로그인 토큰 값 받아오기 성공

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,17 +27,15 @@
         <!-- 리다이렉션을 통해 인가코드를 받기 위함 -->
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
-            android:exported="true"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="oauth2"
-                    android:scheme="@string/kakao_redirection_scheme" />
+                    android:host="oauth"
+                    android:scheme="kakao7d6af00ceade6023ddf611602f60df60" />
             </intent-filter>
         </activity>
 
