--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,11 @@
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".GameActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
