--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,12 @@
             android:exported="true">
 
         </activity>
+
+        <activity
+            android:name=".BurgerActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
