--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".MotionActivity"
             android:exported="true">
 
             <intent-filter>
@@ -84,6 +84,11 @@
      
         <activity
             android:name=".ReviewActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
 
         </activity>
