--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,7 +79,8 @@
         </activity>
         <activity
             android:name=".BurgerActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".GameActivity"/>
           
      
         <activity
