--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,6 +96,11 @@
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".LoadActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
