[FEAT] : 게임 엔딩 화면 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,6 +101,11 @@
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".EndActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
