--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    /* OkHttp */
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
 
     /** Hilt **/
